@@ -22,4 +22,10 @@ class ConfiguratorTests(unittest.TestCase):
         config = self._makeOne(package='pyramid')
         self.assertEqual(config.package, pyramid)
 
+    def test_with_package(self):
+        import pyramid
+        config = self._makeOne()
+        newconfig = config.with_package('pyramid')
+        self.assertEqual(newconfig.package, pyramid)
+
 
